Fix z-index of fr-box to show calendar and dropdowns in DJango, ref:#51

--- a/froala_editor/static/froala_editor/css/froala-django.css
+++ b/froala_editor/static/froala_editor/css/froala-django.css
@@ -9,6 +9,7 @@ form .fr-element p {
 
 .fr-box {
     clear: both;
+    z-index: 1;
 }
 
 div.form-row {
